@@ -1,6 +1,7 @@
 Roundcube Webmail SieveRules
 ============================
 
+ * automatically activate first ruleset even when multi rulesets enabled
  * add option to use "friendly" names in :from params
  * rename default skin to classic (c40419bdfe)
  * rcube_ui > rcube_utils (r6091)
